# FabLiteTest

./: Dockerfile  README.md  data.json  docker-compose.yml  nginx.conf  pyproject.toml
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
settings/: settings.py  urls.py
